--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -56,17 +56,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/punto4"
         android:layout_width="58dp"
         android:layout_height="47dp"
         android:layout_marginStart="244dp"
         android:layout_marginTop="188dp"
+        android:background="#00FFFFFF"
+        android:scaleType="fitCenter"
         android:src="@drawable/puntomapa"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/punto5"
