--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/fondoOscuro"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightBlack" />
+        android:background="#83000000" />
 
     <Button
         android:id="@+id/buttonEmpezar"
