--- a/app/src/main/res/layout/activity_detalle_punto.xml
+++ b/app/src/main/res/layout/activity_detalle_punto.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetallePunto">
+    tools:context=".Activities.DetallePuntoActivity">
 
     <ImageButton
         android:id="@+id/exitbutton2"
