--- a/app/src/main/res/layout/activity_nfcactivity.xml
+++ b/app/src/main/res/layout/activity_nfcactivity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6CDC62"
-    tools:context=".NFCActivity">
+    tools:context=".Activities.NFCActivity">
 
 
     <TextView
