--- a/app/src/main/res/layout/activity_permiso_ruta.xml
+++ b/app/src/main/res/layout/activity_permiso_ruta.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PermisoRutaActivity">
+    tools:context=".Activities.PermisoRutaActivity">
 
     <ImageView
         android:id="@+id/imagenParque"
