--- a/app/src/main/res/layout/activity_ruta.xml
+++ b/app/src/main/res/layout/activity_ruta.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RutaActivity">
+    tools:context=".Activities.RutaActivity">
 
     <org.osmdroid.views.MapView
         android:layout_width="match_parent"
