--- a/app/src/main/res/layout/activity_ver_reserva.xml
+++ b/app/src/main/res/layout/activity_ver_reserva.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerReservaActivity">
+    tools:context=".Activities.VerReservaActivity">
 
     <ImageView
         android:id="@+id/imagenParque"
