--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -15,11 +15,131 @@
         android:id="@+id/mapImageView">
 
         <ImageView
-            android:id="@+id/punto1"
+            android:id="@+id/p1"
             android:layout_width="58dp"
             android:layout_height="47dp"
             android:layout_marginStart="92dp"
             android:layout_marginTop="264dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p2"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="148dp"
+            android:layout_marginTop="256dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p4"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="280dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p5"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="204dp"
+            android:layout_marginTop="308dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p6"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="244dp"
+            android:layout_marginTop="300dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p7"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="236dp"
+            android:layout_marginTop="256dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p8"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="212dp"
+            android:layout_marginTop="244dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p9"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="272dp"
+            android:layout_marginTop="244dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p10"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="144dp"
+            android:layout_marginTop="196dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p18"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="456dp"
+            android:layout_marginTop="264dp"
+            android:src="@drawable/puntomapa"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/p30"
+            android:layout_width="58dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="484dp"
+            android:layout_marginTop="104dp"
             android:src="@drawable/puntomapa"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
