--- a/app/src/main/res/layout/activity_scanqr.xml
+++ b/app/src/main/res/layout/activity_scanqr.xml
@@ -136,7 +136,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/red"
-            android:text="@string/ok" />
+            android:text="Escanear" />
 
         <RelativeLayout
             android:id="@+id/camara"
@@ -145,7 +145,7 @@
             android:layout_below="@id/escanear"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:background="@color/Grey"
+            android:background="@drawable/qrimage"
             android:padding="10dp">
 
 
