Cambiar color de icono al estar en la pantalla

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,6 +49,7 @@
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/home"
         android:contentDescription="@string/home"
+        app:tint="@color/red"
         />
 
     <ImageButton
